--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ add_executable(stcp
     src/graphs/least_stops.cpp
     src/dataset.cpp
     src/harversine.cpp
+    src/interact.cpp
     src/names.cpp
     src/pathfinding.cpp
+    src/ui.cpp
 )
